--- a/simple_http/Cargo.toml
+++ b/simple_http/Cargo.toml
@@ -1,8 +1,11 @@
 [package]
-name = "http_demo"
+name = "simple_http"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+http = "0.2.5"
+regex = "1.5.4"
+percent-encoding = "2.1.0"
